# api_pro

./: db.sqlite3  pyproject.toml
api/migrations/: 0001_initial.py
api_projetos/: settings.py
